--- a/client-react/src/App.css
+++ b/client-react/src/App.css
@@ -49,3 +49,31 @@
 .MuiButton-fullWidth {
   margin-top: 5%;
 }
+
+.homeStyle{
+    font-size: 45px;
+    font-family: sans-serif;
+    margin: 10% top;
+    font-weight: 600;
+    color: rgb(164, 11, 172);
+    height: 80px;
+}
+
+.homeHeader{
+  margin-top: 10%;
+  font-size: 60px;
+  font-family: sans-serif;
+  font-weight: 600;
+  color: rgb(24, 6, 140);
+}
+
+body{
+  background-image: url(./img/pexels-scott-webb-3255761.jpg);
+  background-size: cover;
+  width: 100%;
+  /* height: 100%; */
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
