--- a/client-react/src/App.css
+++ b/client-react/src/App.css
@@ -50,17 +50,21 @@
   margin-top: 5%;
 }
 
+.makeStyles-root-5 > * {
+  margin: 30px;
+}
+
 .homeStyle{
     font-size: 45px;
     font-family: sans-serif;
-    margin: 10% top;
+    margin-top: 8%;
     font-weight: 600;
     color: rgb(164, 11, 172);
     height: 80px;
 }
 
 .homeHeader{
-  margin-top: 10%;
+  margin-top: 8%;
   font-size: 60px;
   font-family: sans-serif;
   font-weight: 600;
@@ -75,5 +79,15 @@ body{
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
+}
+
+.MuiButton-label {
+  text-decoration-line: underline;
+    text-decoration-color: #3f51b5;
+}
+
+
+.MuiTableCell-alignRight{
+  text-align: left;
 }
 
